css-responsive move and finish experimentaion 1

--- a/css-responsive/expiramentaion-1/style.css
+++ b/css-responsive/expiramentaion-1/style.css
@@ -14,3 +14,8 @@
     background-color: palevioletred;
   }
   
+  @media screen and (max-width: 600px){
+      .boxes {
+          display: block;
+      }
+  }
