--- a/css-responsive/challenge/style.css
+++ b/css-responsive/challenge/style.css
@@ -1,10 +1,14 @@
+* {
+    margin-bottom: 1%;
+}
+
 body {
     margin: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column-reverse;
   }
-  
+
   main {
     flex-grow: 1;
   }
@@ -13,7 +17,13 @@ body {
     text-align: center;
   }
   
+  @media screen and (max-width:600px){
   button .text {
     display: none;
   }
-  
+}
+  @media screen and (min-width:600px){
+    body{
+        flex-direction: column;
+    }
+  }
