--- a/css-responsive/challenge/style.css
+++ b/css-responsive/challenge/style.css
@@ -1,14 +1,14 @@
 * {
     margin-bottom: 1%;
-}
-
-body {
+  }
+  
+  body {
     margin: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column-reverse;
   }
-
+  
   main {
     flex-grow: 1;
   }
@@ -17,13 +17,17 @@ body {
     text-align: center;
   }
   
-  @media screen and (max-width:600px){
   button .text {
     display: none;
   }
-}
-  @media screen and (min-width:600px){
-    body{
-        flex-direction: column;
+  
+  @media screen and (min-width: 600px) {
+    body {
+      flex-direction: column;
+    }
+  
+    button .text {
+      display: initial;
     }
   }
+  
